adjust info plist to support fb sdk, import fb sdk in app delegate and support permission redirect, grabbing facebook profile information on facebook login button click

--- a/adae-ios-atsushi/Info.plist
+++ b/adae-ios-atsushi/Info.plist
@@ -45,5 +45,25 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb896455457041729</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>896455457041729</string>
+    <key>FacebookDisplayName</key>
+    <string>Adae</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
 </dict>
 </plist>
